--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.14.1",
     "express-ejs-layouts": "^2.2.0",
     "express-session": "^1.15.1",
+    "geocoder": "^0.2.2",
     "method-override": "^2.3.7",
     "mongoose": "^4.8.3",
     "morgan": "^1.8.1",
